syntax = "proto3";

package calculator;

option go_package = "calculator-grpc-unary-api/calculator/proto";

message CalculatorRequest {
    int32 a = 1;
    int32 b = 2;
}

message CalculatorResponse {
    int32 result = 1;
}

message SqrtRequest {
    int32 number = 1;
}

message SqrtResponse {
    double result = 1;
}

service CalculatorService {
    rpc Calculate(CalculatorRequest) returns (CalculatorResponse);
    rpc CalculatePrimes (CalculatorRequest) returns (stream CalculatorResponse);
    rpc CalculateAverage (stream CalculatorRequest) returns (CalculatorResponse);
    rpc CalculateMax (stream CalculatorRequest) returns (stream CalculatorResponse);
    rpc CalculateSquareRoot (SqrtRequest) returns (SqrtResponse);
}